common-lisp-controller (3.27) unstable; urgency=low

  * NMU
  * New autobuilding system, described in README.autobuild
  * Add new commands: check-common-lisp-autobuild and
  common-lisp-source-compatible.
  * Rename some "defsystem" strings to "clc"
  * Change sh to bash in postinst
  * Rework rules file to use dh_install rather than install
  * Remove copyright-defsystem and defsystem.text from package
  
 -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 22 Sep 2002 14:09:04 -0600

common-lisp-controller (3.26) unstable; urgency=low

  * NMU
  * Call asdf::resolves-symlinks so that truename as far as ASDF thinks is
    the same as CLC's. Helps when the filesystem's *source-root* is
    symlinked.

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 20 Sep 2002 16:29:13 -0600

common-lisp-controller (3.25) unstable; urgency=low

  * NMU
  * Remove (send-clc-command :remove pkg) before recompiling a package

 -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 20 Sep 2002 10:52:51 -0600

common-lisp-controller (3.24) unstable; urgency=low

  * NMU
  * Remove make-wild-type-namestring since it doesn't help anything and 
  it causes trouble with clisp.
  * Add support for clisp's handling of LPNs in compile-and-load command. 

 -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 19 Sep 2002 12:39:23 -0600

common-lisp-controller (3.23) unstable; urgency=low

  * NMU
  * Rework asdf loading of compiled-only files. Now loads asdf
    sub-systems.

 -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 18 Sep 2002 12:40:58 -0600

common-lisp-controller (3.22) unstable; urgency=low

  * NMU
  * Rework output-files for asdf systems to handle loading of dependent
    systems.

 -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 18 Sep 2002 11:42:55 -0600

common-lisp-controller (3.21) unstable; urgency=low
  
  * NMU
  * Change handling of asdf files to that they don't require :pathname
  to be specified.
  * Add information to FAQ.txt about using ASDF system definitions
